--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photoswipe-gallery": "^3.0.1",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.0.7"
   },
